# binaryanalysis-ng

./: .gitignore  Dockerfile  INSTALL.fedora  INSTALL.ubuntu  Makefile  README-analysis.md  README-nix.md  README.md  analysis.nix  docker-compose.yml  flake.nix  maintenance.nix  pyproject.toml  scanqueue.nix  scraper.nix  setup.cfg  shell.nix
doc/: android-test-notes.md  bang-design.md  blogposts.md  database.md  defensivepublications.md  elasticsearch.md  elf_linking.md  firmware-test-notes.md  kaitai-struct.md  labels.md  performance.md  polyglots.md  polygots.md  processing-file-results.md  showing-results.md  testing.md  unpacking-examples.md  weirdfiles.md  writing-parsers-file-format.md  writing-parsers.md  xda_firmware_notes.md  yara_rules.md
maintenance/: README.md
nix/: sources.json
performance-test/: README.md  bang-scan-cprofile.py  bang_log.py  parser-stats-example.txt  parser_stats.py  thread_perf_plot.py
scanqueue/: README.md  queue-config.yaml  requirements.txt
src/: AnalysisEnvironment.py  AnalysisJob.py  BaseScanner.py  ByteCountReporter.py  Dockerfile  FileContentsComputer.py  FileResult.py  JsonReporter.py  LicenseIdentifierScanner.py  Makefile  NSRLHashScanner.py  PickleReader.py  PickleReporter.py  ScanContext.py  ScanEnvironment.py  ScanJob.py  UnpackManager.py  UnpackParser.py  UnpackParserException.py  UnpackResults.py  Unpacker.py  bang-analyze  bang-config.yaml  bang-scanner  bang.config  banganalyzeroptions.py  bangandroid.py  bangfilescans.py  bangfilesystems.py  banggames.py  banglogging.py  bangmedia.py  bangoptions.py  bangshell  (+13 more)
(+1400 files in other folders)
