[metadata]
name = binaryanalysis-ng
version = 0.0.1
author = Armijn Hemel
#author_email = ...
description = Binary Analysis Next Generation (BANG)
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/armijnhemel/binaryanalysis-ng
license_files = LICENSE
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Affero General Public License v3
	Operating System :: OS Independent
keywords =
	binary analysis

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
install_requires =
	deepdiff
	pytest
	kaitaistruct==0.9
	parameterized
	python-tlsh
	tinycss2
	python-snappy
	Pillow
	lz4
	icalendar
	dockerfile-parse
	defusedxml
	mutf8
	brotli
	pyaxmlparser
	pyyaml
	telfhash
	python-lzo
	zstd
	protobuf
	Click

tests_require =
	pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	bang=bang.cli:app

